--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
 
     <footer>
       <small>&copy; <span id="year"></span> Wisk — Fait avec 💖</small><br>
-      <a href="#">Discord</a>•<a href="#">GitHub</a>•<a href="#">Portfolio</a>
+      <a href="https://discord.gg/Hx8WXjaNCj" target="_blank">Rejoindre notre Discord</a>
     </footer>
-  </div>
 
   <script>
     const themeBtn = document.getElementById('themeBtn');
