--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
       <h1>Des interfaces Roblox uniques et professionnelles</h1>
       <p>Nous concevons des interfaces utilisateur immersives, modernes et parfaitement intégrées à vos projets Roblox.</p>
       <a href="#portfolio" class="cta">Découvrir notre travail</a>
+      <a href=https://discord.gg/Hx8WXjaNCj" class="cta">Rejoint le Discord !</a>
     </section>
 
     <section id="about">
