--- a/index.html
+++ b/index.html
@@ -315,11 +315,8 @@
     <section id="portfolio">
       <h2>Portfolio</h2>
       <div class="underline"></div>
-      <div class="portfolio">
-        <div class="thumb" data-img="https://via.placeholder.com/800x500?text=Admin+Panel">Admin Panel</div>
-        <div class="thumb" data-img="https://via.placeholder.com/800x500?text=Car+GUI">Car GUI</div>
-        <div class="thumb" data-img="https://via.placeholder.com/800x500?text=Menu+Principal">Menu Principal</div>
-        <div class="thumb" data-img="https://via.placeholder.com/800x500?text=HUD+Gameplay">HUD Gameplay</div>
+      <div class="Que font nos Dev ?">
+        <div class="thumb" data-img="https://discord.gg/ypfCshQmS8">Site-28</div>
       </div>
     </section>
 
