--- a/index.html
+++ b/index.html
@@ -265,7 +265,6 @@
         <a href="#about">À propos</a>
         <a href="#services">Services</a>
         <a href="#method">Méthode</a>
-        <a href="#portfolio">Portfolio</a>
         <button id="themeBtn">🌙 Mode sombre</button>
       </nav>
     </header>
@@ -275,7 +274,7 @@
       <p>Nous concevons des interfaces utilisateur immersives, modernes et parfaitement intégrées à vos projets Roblox.</p>
       <a href="#portfolio" class="cta">Découvrir notre travail</a>
       <p> </p>
-      <a href=https://discord.gg/Hx8WXjaNCj" class="cta">Rejoint le Discord !</a>
+      <a href=https://discord.gg/Hx8WXjaNCj" class="cta">Rejoint le Discord</a>
     </section>
 
     <section id="about">
@@ -312,11 +311,23 @@
       </div>
     </section>
 
-    <section id="portfolio">
-      <h2>Portfolio</h2>
-      <div class="underline"></div>
-      <div class="Que font nos Dev ?">
-        <div class="thumb" data-img="https://discord.gg/ypfCshQmS8">Site-28</div>
+    <section id="que-font-nos-dev">
+      <h2>Que font nos dev&nbsp;?</h2>
+      <div class="underline" aria-hidden="true"></div>
+
+      <div class="dev-list">
+        <div class="dev-card">
+          <div class="dev-info">
+            <h3>Site-28</h3>
+            <p>
+              Un projet Roblox inspiré de la Fondation SCP, développé par une petite équipe passionnée.
+              Découvrez les coulisses du développement et les dernières mises à jour.
+            </p>
+            <a href="Port.html" target="_blank" rel="noopener" class="btn" aria-label="Voir le projet Site-28">
+              Voir plus →
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
