--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
             <p>
               Un projet Roblox inspiré de la Fondation SCP, développé par une petite équipe passionnée.
               Découvrez les coulisses du développement et les dernières mises à jour.
+              
+              ⚠️ Attention : Site-28 n’appartient pas à Wisk. C’est un projet indépendant créé par une équipe motivée, qui s’améliore de jour en jour grâce au soutien de sa communauté.
             </p>
             <a href="Port.html" target="_blank" rel="noopener" class="btn" aria-label="Voir le projet Site-28">
               Voir plus →
