--- a/index.html
+++ b/index.html
@@ -323,8 +323,9 @@
               Un projet Roblox inspiré de la Fondation SCP, développé par une petite équipe passionnée.
               Découvrez les coulisses du développement et les dernières mises à jour.
               
-              ⚠️ Attention : Site-28 n’appartient pas à Wisk. C’est un projet indépendant créé par une équipe motivée, qui s’améliore de jour en jour grâce au soutien de sa communauté.
-            </p>
+              <strong>⚠️ Attention :</strong> Site-28 n’appartient pas à <em>Wisk</em>.  
+              C’est un projet indépendant créé par une équipe motivée, qui s’améliore de jour en jour grâce au soutien de sa communauté.
+              </p>
             <a href="Port.html" target="_blank" rel="noopener" class="btn" aria-label="Voir le projet Site-28">
               Voir plus →
             </a>
