--- a/index.html
+++ b/index.html
@@ -65,6 +65,34 @@
       z-index:9999;
     }
 
+  /* --- Bande d'annonce --- */
+    .announcement {
+      background: linear-gradient(90deg, var(--accent), var(--accent-light));
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      font-weight: 600;
+      font-size: 15px;
+      position: relative;
+      z-index: 1000;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .announcement button {
+      position: absolute;
+      right: 16px;
+      top: 6px;
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      opacity: 0.8;
+      transition: opacity 0.2s;
+    }
+
+    .announcement button:hover { opacity: 1; }
+
     .container{max-width:1100px;margin:32px auto;padding:0 20px;position:relative;z-index:1;}
 
     /* HEADER */
@@ -254,6 +282,12 @@
   </style>
 </head>
 <body data-theme="light">
+
+  <!-- 🟣 Bande d'annonce -->
+  <div class="announcement" id="announcement">
+    🚀 <strong>Annonce de Exp 1</strong> — Annonce de Exp 1 ! Notre tout premier Admin Panel
+    <button id="closeAnnouncement" aria-label="Fermer la bande d'annonce">✖</button>
+  </div>
 
   <!-- Particles Background -->
   <div id="particles-js"></div>
