--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
 
   <!-- 🟣 Bande d'annonce -->
   <div class="announcement" id="announcement">
-    🚀 <strong>Annonce de Exp 1</strong> — Annonce de Exp 1 ! Notre tout premier Admin Panel
-    <button id="closeAnnouncement" aria-label="Fermer la bande d'annonce">✖</button>
+    🚀 <strong>Annonce de Exp 1</strong> — Annonce de Exp 1 ! Notre tout premier Admin Panel !
   </div>
 
   <!-- Particles Background -->
