--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   <!-- 🟣 Bande d'annonce -->
   <div class="announcement" id="announcement">
-    🚀 <strong>Annonce de Exp 1</strong> — Annonce de Exp 1 ! Notre tout premier Admin Panel !
+    🚀 <strong>Annonce de Exp 1</strong> — Notre tout premier Admin Panel !
   </div>
 
   <!-- Particles Background -->
