Update announcement and add new dev card

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <!-- Announcement -->
   <div class="announcement" id="announcement" role="region" aria-label="Annonce principale">
-    🚀 <strong>Annonce de Exp 1</strong> — Notre tout premier Admin Panel !
+    🚀 <strong>AddOn ReaderDWProx</strong> Disponible sur notre Hub !
   </div>
 
   <!-- Particles Background container -->
@@ -270,6 +270,13 @@
         <article class="dev-card" aria-labelledby="f1-title">
           <h3 id="f1-title">Course de Formule [Simulateur]</h3>
           <p>Un projet Roblox de F1 développé par deux devs. Le jeu est en évolution constante grâce au soutien de sa communauté.</p>
+          <a href="Port.html" target="_blank" rel="noopener" class="cta" style="margin-top:10px; display:inline-block;">Voir plus →</a>
+        </article>
+
+      <div class="dev-list">
+        <article class="dev-card" aria-labelledby="site28-title">
+          <h3 id="site28-title">Installation Echo</h3>
+          <p>Un jeux SCP sur roblox ! (rien a dire de plus XD)</p>
           <a href="Port.html" target="_blank" rel="noopener" class="cta" style="margin-top:10px; display:inline-block;">Voir plus →</a>
         </article>
       </div>
